--- a/style.sass
+++ b/style.sass
@@ -66,7 +66,7 @@ span
     transition: 0.5s
     &:hover
       color: $primaryColorDark
-      transform: translateY(-2px)
+      //transform: translateY(-2px)
 
 .field
   position: relative
