Changed UI and added POM

--- a/style.sass
+++ b/style.sass
@@ -8,10 +8,20 @@ $backgroundColor_sheet: #ffffff
 $dropShadow: rgba(0, 0, 0, .3)
 $titleUnderline: rgba(0, 0, 0, .6)
 $lightSeparator: rgba(0, 0, 0, .2)
+$popupDarken: rgba(0, 0, 0, .85)
+
+html
+  margin: 0px
+  padding: 0px
+  border: 0px
 
 body
+  margin: 0px
+  padding: 0px
+  border: 0px
   background-color: $backgroundColor
   color: $fontColor
+  font-size: 10pt
   font-family: 'Open Sans', sans-serif
   -webkit-font-smoothing: subpixel-antialiased
 
@@ -32,7 +42,18 @@ body
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
-  transition: 2s
+  //transition: 2s
+  &.main
+    width: 800px
+
+.popupBack
+  position: fixed
+  z-index: 1
+  width: 100%
+  height: 100%
+  background-color: $popupDarken
+
+.popupContainer
 
 h2
   border-bottom: solid 1px $titleUnderline
@@ -50,6 +71,10 @@ h2
   font-weight: bold
   transition: background-color 0.5s
   cursor: pointer
+  &.small
+    margin-top: 0pt
+    height: 30pt
+    line-height: 30pt
 
   &:hover
     background-color: $primaryColorDark
@@ -57,6 +82,25 @@ h2
 .infoCentered
   text-align: center
   margin: 8pt
+
+.assignmentRow
+  border-bottom: 1px solid $lightSeparator
+  width: 100%
+  height: 42pt
+
+.assignmentCell
+  position: relative
+  width: 20%
+  float: left
+  min-height: 100%
+
+.textCenter
+  position: absolute
+  top: 50%
+  transform: translateY(-50%)
+  text-align: center
+  width: 100%
+
 
 span
   &.link
