--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 @charset "UTF-8";
+html {
+  margin: 0px;
+  padding: 0px;
+  border: 0px; }
+
 body {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
   background-color: #f5f5f5;
   color: #333333;
+  font-size: 10pt;
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: subpixel-antialiased; }
 
@@ -21,8 +30,16 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  transition: 2s; }
+  transform: translate(-50%, -50%); }
+  .sheet.main {
+    width: 800px; }
+
+.popupBack {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85); }
 
 h2 {
   border-bottom: solid 1px rgba(0, 0, 0, 0.6);
@@ -40,12 +57,34 @@ h2 {
   font-weight: bold;
   transition: background-color 0.5s;
   cursor: pointer; }
+  .button.small {
+    margin-top: 0pt;
+    height: 30pt;
+    line-height: 30pt; }
   .button:hover {
     background-color: #318686; }
 
 .infoCentered {
   text-align: center;
   margin: 8pt; }
+
+.assignmentRow {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 42pt; }
+
+.assignmentCell {
+  position: relative;
+  width: 20%;
+  float: left;
+  min-height: 100%; }
+
+.textCenter {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  width: 100%; }
 
 span.link {
   cursor: pointer;
