--- a/src/main/webapp/style.sass
+++ b/src/main/webapp/style.sass
@@ -1,7 +1,7 @@
 
 
 $fontColor: #333333
-$primaryColor: #FFabab
+$primaryColor: #FFff00
 $primaryColorDark: darken($primaryColor, 10)
 $backgroundColor: #f5f5f5
 $backgroundColor_sheet: #ffffff
