--- a/src/main/webapp/style.sass
+++ b/src/main/webapp/style.sass
@@ -1,8 +1,9 @@
 
 
 $fontColor: #333333
-$primaryColor: #FFff00
+$primaryColor: #3295d5
 $primaryColorDark: darken($primaryColor, 10)
+$dangerColor: rgb(205, 66, 47)
 $backgroundColor: #f5f5f5
 $backgroundColor_sheet: #ffffff
 $dropShadow: rgba(0, 0, 0, .3)
@@ -78,6 +79,17 @@ h2
 
   &:hover
     background-color: $primaryColorDark
+
+.progressBar
+  position: relative
+  text-align: center
+  background-color: $primaryColor
+  color: $backgroundColor_sheet
+  margin-top: 0pt
+  height: 10pt
+  transition: background-color 0.5s
+  &.danger
+    background-color: $dangerColor
 
 .infoCentered
   text-align: center
