--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -127,6 +127,17 @@ i {
   .fieldSplitter.centered {
     left: 140pt; }
 
+textarea {
+  -webkit-appearance: none;
+  resize: none;
+  width: calc(100% - 6px);
+  height: 50vh;
+  border: solid 1px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  transition: background-color 0.5s, border-color 0.5s; }
+  textarea:hover {
+    border-color: #3295d5; }
+
 input[type="checkbox"] {
   -webkit-appearance: none;
   position: absolute;
