Fixed errors with assignments. Added exit buttons.

--- a/src/main/webapp/style.sass
+++ b/src/main/webapp/style.sass
@@ -61,6 +61,14 @@ h2
   margin: 0px
   padding-bottom: 6pt
 
+.headerExit
+  position: absolute
+  right: 24pt
+  top: 8pt
+  font-size: 16pt
+  cursor: pointer
+
+
 .button
   position: relative
   margin-top: 16pt
