--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -46,6 +46,13 @@ h2 {
   margin: 0px;
   padding-bottom: 6pt; }
 
+.headerExit {
+  position: absolute;
+  right: 24pt;
+  top: 8pt;
+  font-size: 16pt;
+  cursor: pointer; }
+
 .button {
   position: relative;
   margin-top: 16pt;
